--- a/index.html
+++ b/index.html
@@ -60,6 +60,17 @@
           >2</sub
         >
       </h4>
+      <iframe
+        class="image"
+        id="electrolysis-vid"
+        width="640"
+        height="360"
+        src="https://www.youtube.com/embed/sQK3Yr4Sc_k"
+        title="Potassium in Water (reaction only)"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
       <p class="paragraph">
         Photosynthesis is a very important reaction without it there wouldn't be any oxygen gas in the atmosphere.
         Oxygen is a very important element in respiration which is a process that allows animals and other living
@@ -67,6 +78,17 @@
       </p>
       <h2>Electrolysis</h2>
       <h4>Equation: 2H<sub>2</sub>O → 2H<sub>2</sub> + O<sub>2</sub></h4>
+      <iframe
+        class="image"
+        id="electrolysis-vid"
+        width="640"
+        height="360"
+        src="https://www.youtube.com/embed/g3Ud6mHdhlQ?start=417"
+        title="Potassium in Water (reaction only)"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
       <p class="paragraph">
         Electrolysis is a way to convert water into oxygen and hydrogen gas using electricity. This process is used in
         places like submarines where water is an abundant resource and oxygen gas is not available. Electrolysis could
